# modaem

./: .gitignore  CMakeLists.txt  mkdocs.yml
dependencies/contur/: contur.f
dependencies/polypack/: polypack.f
doc/: .texlipse
doc/latex/: analysis_modules.tex  aquifer_specification.tex  element_modules.tex  groundwater_modeling.tex  introduction.tex  mathematical_formulation.tex  modaem-user.lof  modaem-user.tex  modaem-user.toc  processing_directives.tex  script_files.tex  tools.tex  validation.tex
doc/lyx/: INQ-module.sxw  modaem-user-backup.lyx  modaem-user.lyx  modaem-user.lyx~
doc/lyx/analysis_modules/: analysis_modules.lyx
doc/lyx/aquifer_specification/: aquifer_specification.lyx  aquifer_specification.lyx~
doc/lyx/element_modules/: element_modules.lyx
doc/lyx/grdwtr_modeling/: grdwtr_modeling.lyx  grdwtr_modeling.lyx~
doc/lyx/introduction/: introduction.lyx  introduction.lyx~
doc/lyx/mathematical_formulation/: mathematical_formulation.lyx
doc/lyx/modaem_script_files/: #modaem_script_files.lyx#  modaem_script_files.lyx~
doc/lyx/modaem_tools/: modaem_tools.lyx
doc/lyx/processing_directives/: processing_directives.lyx
doc/lyx/validation/: validation.lyx
docs/: analysis_modules.md  aquifer_specification.md  element_modules.md  groundwater_modeling.md  index.md  introduction.md  mathematical_formulation.md  processing_directives.md  script_files.md  tools.md  validation.md
python/: pyproject.toml
python/src/: modaem.py
python/src/modaem/editor/: arc_node.py
python/tests/: test_modaem.py
src/: CMakeLists.txt  Doxyfile  Makefile  a_ext.F90  a_grid.F90  a_inq.F90  a_obs.F90  a_stdio.F90  a_tr0.F90  f_aem.F90  f_areasink.F90  f_bwl.F90  f_dipole.F90  f_linesink.F90  f_pond.F90  f_reference.F90  f_well.F90  i_areasink.F90  i_dipole.F90  i_linesink.F90  i_pond.F90  i_reference.F90  i_well.F90  m_aem.F90  m_aqu.F90  m_as0.F90  m_cw0.F90  m_ext.F90  m_hb0.F90  m_in0.F90  m_inq.F90  m_layer.F90  m_ls0.F90  m_ls1.F90  m_ls2.F90  m_ls3.F90  m_packages.F90  m_pd0.F90  m_wl0.F90  m_wl1.F90  (+22 more)
src/nbproject/: configurations.xml  project.xml
src/nbproject/private/: Default.properties  configurations.xml
tools/contour/src/: contour.F90  contouring.F90
validation/aqu_0/: modaem.aem
validation/aqu_1/: modaem.aem
validation/aqu_1a/: modaem.aem
validation/aqu_2/: modaem.aem
validation/aqu_3/: modaem.aem
validation/aqu_4/: modaem.aem
validation/aqu_5/: modaem.aem
validation/as0_0/: modaem.aem
validation/as0_1/: modaem.aem
validation/ctown/nonvect/: modaem.nam  onemgd.aem
validation/cw0_0/: modaem.aem
validation/dard/: NO-CW.aem  modaem.nam
validation/ext/: modaem.aem
validation/hb0_0/: modaem.aem
validation/ls0_0/: modaem.aem
validation/ls1_0/: modaem.aem
validation/ls1_hb0/: modaem.aem  modaem.nam
validation/ls2_0/: modaem.aem
validation/ls2_drain/: modaem.aem  modaem.nam
validation/ls2_river/: modaem.aem
validation/tr0_0/: modaem.aem
validation/tr0_1/: modaem.aem
validation/wl0_0/: modaem.aem  modaem.nam
validation/wl1_0/: modaem.aem
vs/modaem1.8/: modaem1.8.sln
vs/modaem1.8/modaem1.8/: modaem1.8.vfproj
